Update action name

--- a/.github/workflows/build_and_push_deps_ltr.yml
+++ b/.github/workflows/build_and_push_deps_ltr.yml
@@ -2,7 +2,7 @@
 # DOCKER BUILD: Dockerfile.g3wsuite-deps.ltr.dockerfile
 ##
 
-name: Build dependencies
+name: Build G3W-SUITE LTR dependencies
 
 on:
   push:
